--- a/src/components/Root/style.css
+++ b/src/components/Root/style.css
@@ -10,9 +10,15 @@
   gap: 16px;
 }
 
-.main-content > nav {
-  flex: 0;
-  width: 20%;
+.navbar {
+  background-color: var(--bs-primary);
+  --bs-navbar-brand-color: var(--bs-white);
+  --bs-navbar-padding-y: 0.8rem;
+}
+
+.navbar-nav {
+  --bs-nav-link-color: var(--bs-white);
+  --bs-navbar-active-color: var(--bs-primary-text-emphasis);
 }
 
 .main-content > main {
@@ -25,8 +31,4 @@
 
 nav .nav-tab {
   color: inherit;
-}
-
-nav .nav-tab.active {
-  border-right: 2px solid lightblue;
 }
