--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: unset;
+  color: unset;
 }
 
 * {
