--- a/src/components/Root/style.css
+++ b/src/components/Root/style.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
+  width: 100%;
+  height: 100%;
 }
 
 .main-content {
@@ -31,4 +33,20 @@
 
 nav .nav-tab {
   color: inherit;
+}
+
+.user-nav-wrapper {
+  margin-left: auto;
+  align-items: center;
+}
+
+.user-nav-wrapper .btn a {
+  color: inherit;
+  text-decoration: none;
+}
+
+@media (max-width: 991px) {
+  .user-nav-wrapper {
+    margin-left: unset;
+  }
 }
